--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#create</h1>
-<p>Find me in app/views/users/create.html.erb</p>
+<h2> Create user </h2>
+
+<h2>Sign Up!</h2>
+
+<%= form_for @user do |f| %>
+     <%= f.label :name %>
+     <%= f.text_field :name %>
+
+     <%= f.label :email %>
+     <%= f.text_field :email %>
+
+     <%= f.label :password %>
+     <%= f.text_field :password %>
+
+     <%= f.submit "Sign Me Up!" %>
+<% end %>
+    <%= link_to "Back to the list!", users_path %>
