--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,20 @@
-    <h1> <%= @user.name %> </h1>
+
+    <h1>Show Users!</h1>
+    <ul>
+        <% @users.each do |u| %>
+            <li>
+                <strong> <%= u.name %>  -- <%= u.email %> -- <%= u.password %> </strong>
+                <%= link_to "More details!", user_path(u) %>
+                <%= link_to "Edit this user!", edit_user_path(u) %>
+                 <%= link_to "Delete this user!", @user, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %>
+            </li>
+        <% end %>
+    </ul>
+
+    <!--     <h1> <%= @user.name %> </h1>
 
     <p> User's email: <%= @user.email %> password<%= @user.password %></p><br />
 
     <%= link_to "Delete this user!", @user, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %><%= link_to "Edit this user!", edit_user_path(@user) %><br />
 
-    <%= link_to "Back to the list!", users_path %>
+    <%= link_to "Back to the list!", users_path %> -->
