uploaded car form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="logo"></div>
 <h1>Car_Pinion</h1>
 <%= yield %>
+
+<hr>
+<div class="footer">
+
+	<button type="button" class="btn btn-primary">About us</button><br />
+	<button type="button" class="btn btn-primary">Nearby Grage</button><br />
+	<button type="button" class="btn btn-primary">Blog</button>
+	<a href="www.google.com">Google</a><br />
+	<a href="www.gernalassemb.ly">GA</a>
+</div>
 
 </body>
 </html>
