--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -14,10 +17,66 @@
  *= require_self
  */
 
-body{
-	background: #DCDCDC;
-	text-align: center;
+.logo
+{
+	
+
 }
+
 h1{
 	text-align: center;
 }
+.signup{
+	float: right;
+}
+
+.footer{
+	background: #000000;
+	opacity: 0.8;
+	font-size: 18px;
+	color: #FFFFFF;
+
+}
+
+
+ *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+
+body {
+background-color: #B0C4DE;
+ 
+  font-size: 18px;
+  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing:antialiased;
+  line-height: 1.5;
+  max-width: 100%;
+  margin: 3rem auto 10%;
+}
+
+#navbar {
+  width: 100%;
+  height: 50px;
+  font-size: 14px;
+  font-family: cursive;
+  font-weight: bold;
+  text-shadow: 3px 2px 3px #333333;
+  border-radius: 8px;
+  position: fixed;
+  top: 1rem; right: 1rem;
+  text-align: left;
+  background-color: #00008B;
+  opacity: 0.7;
+  display: inline;
+}
+.navbar-form{
+
+ text-align: right;
+}
+
+rough{
+   background: url('car environment.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
