--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -2,7 +2,7 @@
     <ul>
         <% @cars.each do |c| %>
             <li>
-                <strong> <%= c.make %> -- <%= c.year %> -- <%= c.trim %> -- <%= c.mileage %> --<%= c.price %> -- <%= c.transmission %> -- <%= c.colour %> -- <%= c.description %></strong>
+                <strong> Make is <%= c.make %> Year: <%= c.year %> Veh. trim <%= c.trim %> Mileage on veh. <%= c.mileage %> veh. transmission is <%= c.transmission %> Colour is <%= c.colour %> and asking price is $ <%= c.price %> ></strong>
                 <%= link_to "More details!", cars_path(c) %>
                 <%= link_to "Edit car details!", edit_car_path(c) %>
                  <%= link_to "Delete this car!", @car, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %>
