--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,76 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="logo"></div>
+<div id="navbar">
+  <ul >
+    <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Dropdown <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu" role="menu">
+       <p>About Us!</p><p> Blog</p><p>Home </p> <p>Nearby Grage</p><p>Contact Us</p><p> Terms of Use </p><p> Policy</p><p>Logo</p><p> Links</p>
+      </ul>
+      
+      <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+      <button type="button" class="btn btn-default navbar-btn">Sign up</button>
+    </li>
+     <form class="navbar-form" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+  </ul>
+</div>
+<br /><br /><br />
 <h1>Car_Pinion</h1>
-<%= yield %>
+<%= yield %><br />
+<br />
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="/Users/amanjotdhillon/carpinion/app/assets/images/camaro.jpg" style="width:360px;height:360px"/>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="/Users/amanjotdhillon/carpinion/app/assets/images/charger.jpg" style="width:360px;height:360px" class="img-responsive" />
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+ 
+
+<!-- <div class="container">
+	<div class="jumbotron">
+	<h1>Car-Pinion</h1>
+	</div>
+</div> -->
 <hr>
 <div class="footer">
-
-	<button type="button" class="btn btn-primary">About us</button><br />
-	<button type="button" class="btn btn-primary">Nearby Grage</button><br />
-	<button type="button" class="btn btn-primary">Blog</button>
-	<a href="www.google.com">Google</a><br />
-	<a href="www.gernalassemb.ly">GA</a>
+<p>About Us!<br/> Blog</p>
+<p>Home <br /> Nearby Grage</p>
+<p>Contact Us<br /> Terms of Use <br /> Policy</p>
+<p>Logo<br /> Links</p>
 </div>
 
 </body>
