--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -3,13 +3,13 @@
 
 <%= form_for @user do |f| %>
      <%= f.label :name %>
-     <%= f.text_field :name %>
+     <%= f.text_field :name %><br />
 
      <%= f.label :email %>
-     <%= f.text_field :email %>
+     <%= f.text_field :email %><br />
 
      <%= f.label :password %>
-     <%= f.text_field :password %>
+     <%= f.text_field :password %><br />
 
      <%= f.submit "Sign Me Up!" %>
 <% end %>
