--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="signup">
 <%= form_for @user do |f| %>
      <%= f.label :name %>
      <%= f.text_field :name %>
@@ -12,3 +12,4 @@
      <%= f.submit "Sign Me Up!" %>
 <% end %>
     <%= link_to "Back to the list!", users_path %>
+    </div>
