--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,9 @@
         <% @users.each do |u| %>
             <li>
                 <strong> User name is</strong> <%= u.name %> ,<strong>E-mail ID:</strong><%= u.email %><strong> & password is</strong> <%= u.password %> 
+                <%= link_to "Show", user_path(u) %>
                 <%= link_to "Edit user!", edit_user_path(u) %>
-                 <%= link_to "Delete user!", @user, method: :delete, data: {confirm: 'Are you sure?'} %>
+                 <%= link_to "Delete user!", u, method: :delete, data: {confirm: 'Are you sure?'} %>
             </li>
         <% end %>
     </ul>
