--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,6 +3,7 @@
         <% @cars.each do |c| %>
             <li>
                 <strong> Make is </strong><%= c.make %><strong> Year: </strong><%= c.year %><strong> Veh. trim</strong> <%= c.trim %><strong> Mileage on veh.</strong> <%= c.mileage %><strong> veh. transmission is </strong><%= c.transmission %><strong> Colour is </strong><%= c.colour %> <strong>and asking price is</strong> $ <%= c.price %> >
+                <%= link_to "Show", car_path(c) %>
                 <%= link_to "Edit car details!", edit_car_path(c) %>
                  <%= link_to "Delete this car!", @car, method: :delete, data: { confirm: 'Are you sure you want to delete it?' } %>
             </li>
