--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,127 +6,87 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+    <header class="logo">
+          <a href="sessions/index.html.erb"><img src="assets/logo.jpg" alt="click for home." class="img-responsive"></a>
+    </header>
 <body>
 <div class="container">
-    <!-- row 1 -->
-    <header class="row">
-        <div class="col-lg-6 col-sm-5">
-            <a href="index.html"><img src="img/logo.png" alt="Wisdom Pets. click for home." class="img-responsive"></a>
+  <br><br>
+      <!-- row 1 -->
+        <div id="navbar">
+          <div class="enter">
+          <%= yield %>
+          </div>
         </div>
-        <div class="col-lg-6 col-sm-7">
-            <img src="img/animals.jpg" alt="" class="hidden-xs img-responsive">
+      <!-- row 2 -->
+      <div id="carousel-id" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-id" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-id" data-slide-to="1"></li>
+          <li data-target="#carousel-id" data-slide-to="2"></li>
+        </ol>
+      <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+              <div class="item active">
+                <img src="assets/camaro.jpg" style="width:820px; height:440px"/>
+                <div class="carousel-caption">
+                    2015 Camaro 
+                </div>
+              </div>
+              <div class="item">
+               <img src="assets/charger.jpg" style="width:820px; height:440px" class="img-responsive" />
+                <div class="carousel-caption">
+                  2014 charger 
+                </div>
+              </div>
+              <div class="item">
+               <img src="assets/farrari.jpg" style="width:820px; height:440px" class="img-responsive" />
+                <div class="carousel-caption">
+                  You Can Pinin My Farina 
+                </div>
+              </div>
+              <div class="item">
+               <img src="assets/Lamborghini.jpg" style="width:820px; height:440px" class="img-responsive" />
+                <div class="carousel-caption">
+                  2014 Lamborghini 
+                </div>
+              </div>
+              <div class="item">
+               <img src="assets/peugeot.jpg" style="width:820px; height:440px" class="img-responsive" />
+                <div class="carousel-caption">
+                  2013 peugeot 
+                </div>
+              </div>
+          </div>
         </div>
-    </header>
-    
-    <!-- row 2 -->
-    <div class="jumbotron">
-        <img src="img/jumbotron.jpg" alt="" class="pull-right img-responsive img-circle">
-        <h1> We treat your pets like our own</h1>
-        <p>fish. </p>
-    </div>
-    
-    <!-- row 3 -->
-    <div class="row">
-        <div class="col-md-3 col-xs-6">
-            <p><img src="img/gsd.jpg" alt="" class="img-responsive img-thumbnail"></p>
-            <h4>Thanks for helping our German Shepherd</h4>
-            <blockquote>
-              <p>allergy!</p>
-            </blockquote>
-            
-<div class="container">
-  <div id="navbar">
-    <ul >
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Dropdown <span class="caret"></span>
-        </a>
-      <ul class="dropdown-menu" role="menu">
-         <p>About Us!</p><p> Blog</p><p>Home </p> <p>Nearby Grage</p><p>Contact Us</p><p> Terms of Use </p><p> Policy</p><p>Logo</p><p> Links</p>
-      </ul>
-      <button type="submit" class="btn btn-default">Sign In</button>
-      <button type="submit" class="btn btn-default">Sign Up</button>
-        <form class="navbar-form" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Find a Car!">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-        </form>
-      </li>
-    </ul>
-  </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-id" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#carousel-id" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+</div> <!-- end container -->
+      <!-- row 4 -->
+    <footer class="footer">
 
-  <br />
-  <h1>Car_Pinion</h1>
-  <%= yield %>
-  <br />  
-  <div id="carousel-id" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-id" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-id" data-slide-to="1"></li>
-        <li data-target="#carousel-id" data-slide-to="2"></li>
-        <li data-target="#carousel-id" data-slide-to="3"></li>
-      </ol>
-    <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-            <div class="item active">
-              <img src="assets/camaro.jpg" style="width:600px; height:360px"/>
-              <div class="carousel-caption">
-                  2015 Camaro
-              </div>
-            </div>
-            <div class="item">
-             <img src="assets/charger.jpg" style="width:600px; height:360px" class="img-responsive" />
-              <div class="carousel-caption">
-                2014 charger <p>Stepping up to the R/T gets you a 370-hp 5.7-liter V8 engine along with a sport-tuned suspension and a variety of luxury, convenience and technology items that are mostly available as options on the V6 trims. The R/T's Super Track Pak gets you additional handling and braking upgrades, including a three-mode adjustable stability control system.</p>
-              </div>
-            </div>
-            <div class="item">
-             <img src="assets/cars.jpg" style="width:600px; height:360px" class="img-responsive" />
-              <div class="carousel-caption">
-                2014 cars
-              </div>
-            </div>
-      </div>
-  </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-id" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="#carousel-id" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
-  </div>
-  <p><a href="#" class="btn btn-warning btn-lg">Read more >></a></p>
-        </div>
-        <div class="col-md-3 col-xs-6">
-            <p><img src="img/kitten.jpg" alt="" class="img-responsive img-rounded "></p>
-            <h4>Our diabetic kitty is better</h4>
-            <p>diabetes. </p>
+        <div class="col-md-3 col-xs-3">
+            <p>About Us</p><p>Blog</p>
             <p><a href="#" class="btn btn-success btn-xs">Read more >></a></p>
         </div>
-        <div class="col-md-3 col-xs-6">
-            <p><img src="img/bulldog.jpg" alt="" class="img-responsive img-thumbnail"></p>
-            <h4>Our grape-loving dog</h4>
-            <p>quickly. </p>
-            <p><a href="#" class="btn btn-primary btn-block">Read more >></a></p>
+        <div class="col-md-3 col-xs-3">
+            <p>Nearby Grage</p>
+            <p>Mobile Mechanic</p>
+            <p><a href="#" class="btn btn-success btn-xs">Read more >></a></p>
         </div>
-        <div class="col-md-3 col-xs-6">
-            <p><img src="img/goldfish.jpg" alt="" class="img-responsive img-rounded"></p>
-            <h4>A dog antibiotic cured our fish</h4>
-            <p>septicemia. </p>
-             <p><a href="#" class="btn btn-info">Read more >></a></p>
+        <div class="col-md-3 col-xs-3">
+            <p>Terms of use</p>
+            <p>Policy</p>
+            <p><a href="#" class="btn btn-success btn-xs">Read more >></a></p>
          </div>
-    </div>
-    
-    <!-- row 4 -->
-    <footer class="row">
-         <p><small>health.</small></p>
-         <p><small>Wisdom.</small></p>
+         <p><small>Contact us.</small></p>
+         <p><img src="assets/logo.jpg" alt="" class="img-responsive img-rounded "></p>
     </footer>
-
-</div> <!-- end container -->
-  
 </body>
 </html>
