--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,24 @@
+
 <div class="signup">
-<%= form_for @user do |f| %>
-     <%= f.label :name %>
-     <%= f.text_field :name %>
 
-     <%= f.label :email %>
-     <%= f.text_field :email %>
+<h1>Signup!</h1>
 
-     <%= f.label :password %>
-     <%= f.text_field :password %>
+<%= form_for @user do |f| %><br>
+     <%= f.label :name %><br>
+     <%= f.text_field :name %><br>
 
-     <%= f.submit "Sign Me Up!" %>
-<% end %>
+     <%= f.label :email %><br>
+     <%= f.text_field :email %><br>
+
+     <%= f.label :password %><br>
+     <%= f.text_field :password %><br>
+
+     <%= f.label :password_confirmation %><%= @user.errors.messages[:password].join(", ") %><br>
+     <%= f.text_field :password_confirmation %><br><br>
+
+     <%= f.submit "Sign Me Up!" %><br>
+     <%= link_to "Log in!", sessions_path %><br>
+<% end %><br>
+   
     <%= link_to "Back to the list!", users_path %>
     </div>
