--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,35 +1,41 @@
+<div class="car-new">
 <h1>Add new car details</h1>
 <%= form_for @car do |c| %>
 
-     <%= c.label :make %>
+     <%= c.label :make %><br>
      <%= c.text_field :make %><br />
 
-     <%= c.label :model %>
+     <%= c.label :model %><br>
      <%= c.text_field :model %><br />
 
-     <%= c.label :year %>
+     <%= c.label :year %><br>
      <%= c.text_field :year %><br />
 
-     <%= c.label :trim %>
+     <%= c.label :trim %><br>
      <%= c.text_field :trim %><br />
 
-     <%= c.label :mileage %>
+     <%= c.label :mileage %><br>
      <%= c.text_field :mileage %><br />
 
-     <%= c.label :price %>
+     <%= c.label :price %><br>
      <%= c.text_field :price %><br />
 
-     <%= c.label :transmission %>
+     <%= c.label :transmission %><br>
      <%= c.text_field :transmission %><br />
 
-     <%= c.label :colour %>
+     <%= c.label :colour %><br>
      <%= c.text_field :colour %><br />
 
-     <%= c.label :description %>
-     <%= c.text_field :description %><br />
+     <%= c.label :title %><br>
+     <%= c.text_field :title %><br />
 
-     <%= c.submit "Add info!" %>
+     <%= c.label :picture %><br>
+     <%= c.file_field :picture %><br>
 
+
+        <%= c.submit "Add info!" %><br>
+              
 <% end %>
 
     <%= link_to "Back to the list!", cars_path %>
+</div>
