--- a/app/views/cars/update.html.erb
+++ b/app/views/cars/update.html.erb
@@ -9,8 +9,10 @@
 		Price: <%= f.text_field :price %>
 		Transmission: <%= f.text_field :transmission %>
 		Colour: <%= f.text_field :colour %>
-		Descripition: <%= f.text_field :descripition %>
+		Descripition: <%= f.text_field :title %>
 
+         <%= f.label :picture %>
+         <%= f.file_field :picture %>
 
         <%= f.submit "Edit car details!" %>
 
