--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,16 +1,22 @@
-
+<div class="signup">
 <h2>Sign Up!</h2>
 
-<%= form_for @user do |f| %>
-     <%= f.label :name %>
-     <%= f.text_field :name %><br />
+<%= form_for @user do |f| %><br>
+     <%= f.label :name %><br>
+     <%= f.text_field :name %><br>
 
-     <%= f.label :email %>
-     <%= f.text_field :email %><br />
+     <%= f.label :email %><br>
+     <%= f.text_field :email %><br>
 
-     <%= f.label :password %>
-     <%= f.text_field :password %><br />
+     <%= f.label :password %><br>
+     <%= f.text_field :password %><br>
 
-     <%= f.submit "Sign Me Up!" %>
-<% end %>
+     <%= f.label :password_confirmation %><%= @user.erroes.messages[:password].join(", ") %><br>
+     <%= f.text_field :password_confirmation , class: 'form-control' %><br>
+
+     <%= f.submit "Sign Me Up!" %><br>
+     <%= link_to "Log in!", sessions_path %><br>
+
+<% end %><br>
     <%= link_to "Back to the list!", users_path %>
+ </div>
