--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,14 @@
+    <div class="edit">
     <h1> Edit User! </h1>
 
     <%= form_for @user do |f| %>
-        Name: <%= f.text_field :name %>
-        Email: <%= f.text_field :email %>
-        Password: <%= f.text_field :password %>
+        Name: <%= f.text_field :name %><br>
+        Email: <%= f.text_field :email %><br>
+        Password: <%= f.text_field :password %><br>
 
-        <%= f.submit "Edit user!" %>
+        <%= f.submit "Edit user!" %><br><br>
 
     <% end %>
 
     <%= link_to "Back to user list!", users_path %>
+    </div>
