--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
           </header>
         </div>
         <div class="enter">
-                            Logged In: <%=session[:email]%><br>
-                           <%= link_to "Log out!", log_out_path, method: :delete%>
+         Logged In: <%=session[:email]%><br>
+         <%= link_to "Log out!", log_out_path, method: :delete%>
           <%= yield %>
         </div>
 </div> <!-- end container -->
@@ -38,7 +38,7 @@
             <p><a href="#" class="btn btn-success btn-xs">Read more >></a></p>
          </div>
          <p><small>Contact us.</small></p>
-         <p><img src="assets/logo.jpg" alt="" class="img-responsive img-rounded "></p>
+         <p><img src="assets/c-logo.jpg" alt="" class="img-responsive img-rounded "></p>
     </footer>
 </body>
 </html>
