--- a/app/views/users/update.html.erb
+++ b/app/views/users/update.html.erb
@@ -4,7 +4,7 @@
     <%= form_for @user do |f| %>
         Name: <%= f.text_field :name %><br>
         Email: <%= f.text_field :email %><br>
-        Password: <%= f.text_field :password %><br>
+        Password: <%= f.password_field :password %><br>
 
 
         <%= f.submit "Update user info!" %><br><br>
@@ -13,3 +13,4 @@
 
     <%= link_to "Back to the list!", users_path %>
   </div>
+<br><br><br><br><br>
