--- a/app/views/cars/create.html.erb
+++ b/app/views/cars/create.html.erb
@@ -3,40 +3,37 @@
 
 <%= form_for @car do |c| %>
 
-     <%= c.label :make %>
-     <%= c.text_field :make %>
+     <%= c.label :make %><br>
+     <%= c.text_field :make %><br>
 
-     <%= c.label :model %>
-     <%= c.text_field :model %>
+     <%= c.label :model %><br>
+     <%= c.text_field :model %><br>
 
-     <%= c.label :year %>
-     <%= c.text_field :year %>
+     <%= c.label :year %><br>
+     <%= c.text_field :year %><br>
 
-     <%= c.label :trim %>
-     <%= c.text_field :trim %>
+     <%= c.label :trim %><br>
+     <%= c.text_field :trim %><br>
 
-     <%= c.label :mileage %>
-     <%= c.text_field :mileage %>
+     <%= c.label :mileage %><br>
+     <%= c.text_field :mileage %><br>
 
-     <%= c.label :price %>
-     <%= c.text_field :price %>
+     <%= c.label :transmission %><br>
+     <%= c.text_field :transmission %><br>
 
-     <%= c.label :transmission %>
-     <%= c.text_field :transmission %>
+     <%= c.label :colour %><br>
+     <%= c.text_field :colour %><br>
 
-     <%= c.label :colour %>
-     <%= c.text_field :colour %>
-
-     <%= c.label :title %>
-     <%= c.text_field :title %>
-
-     <%= c.label :picture %>
-     <%= c.file_field :picture %>
+     <%= c.label :title %><br>
+     <%= c.text_field :title %><br>
+<!-- 
+     <%= c.label :picture %><br>
+     <%= c.file_field :picture %><br> -->
   
-          
-     <%= c.submit "Add info!" %>
+     <%= c.submit "Add info!" %><br>
 
 <% end %>
 
     <%= link_to "Back to the list!", cars_path %>
 </div>
+<br><br><br><br><br>
