--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,21 +1,30 @@
-<div class="car-edit">
+<div class="edit">
 <h1>Edit car info.</h1>
+<div class="row">
+  <div class="span2 offsets6">
+<%= form_for @car do |f| %>
+        <%= f.label :make %> 
+        <%= f.text_field :make %>
+        <%= f.label :model %>
+         <%= f.text_field :model %>
+        <%= f.label :make %> 
+        <%= f.text_field :year %>
+        <%= f.label :make %> 
+         <%= f.text_field :trim %>
+        <%= f.label :make %> 
+        <%= f.text_field :mileage %>
+        <%= f.label :make %>  
+        <%= f.text_field :transmission %>
+        <%= f.label :make %>  
+        <%= f.text_field :colour %>
+        <%= f.label :make %>  
+        <%= f.text_field :title %>
 
-    <%= form_for @car do |f| %>
-        Make: <%= f.text_field :make %><br />
-        Model: <%= f.text_field :model %><br />
-        Year: <%= f.text_field :year %><br />
-        Trim: <%= f.text_field :trim %><br />
-		Mileage: <%= f.text_field :mileage %><br />
-		Price: <%= f.text_field :price %><br />
-		Transmission: <%= f.text_field :transmission %><br />
-		Colour: <%= f.text_field :colour %><br />
-        Title: <%= f.text_field :title %>
-           
-
-        <%= f.submit "Edit car details!" %>
-
-    <% end %>
-
-    <%= link_to "Back to the list!", cars_path %>
+    <%= f.submit "Edit car details!" %>      
+    
+<% end %>
 </div>
+</div>
+<%= link_to "Back to the list!", cars_path %>
+</div>
+<br><br><br><br><br>
