--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,19 +1,46 @@
-    <div><%= link_to "Register New Car", new_car_path %></div>
-    <h1>Cars!</h1>
-    <ul>
-        <% @cars.each do |c| %>
-            <li>
-                <strong> Make is </strong><%= c.make %>
-                <strong> Year: </strong><%= c.year %>
-                <strong> Veh. trim</strong> <%= c.trim %>
-                <strong> Mileage on veh.</strong> <%= c.mileage %>
-                <strong> veh. transmission is </strong><%= c.transmission %>
-                <strong> Colour is </strong><%= c.colour %> 
-                <strong>and asking price is</strong> $ <%= c.price %> 
-                <%= link_to "Show", car_path(c) %>
-                <%= link_to "Edit", edit_car_path(c) %>               
-            <%= link_to "Delete", c, method: :delete, data: { confirm: 'Are you sure?' } %>
-            <%= link_to "Back to the list!", cars_path %> 
-            </li>
-        <% end %>
-    </ul>
+
+<div><%= link_to "Register New Car", new_car_path %></div>
+    
+<div class="show">
+    <h1>Cars!</h1>       
+    <div class="table-responsive">
+    <table class="table table-hover">
+        <tr class="info">
+              <th>Make </th>
+              <th>Model</th>
+              <th>Year</th>
+              <th>Trim</th>
+              <th>Mileage</th>
+              <th>Transmission</th>
+              <th>Colour</th>
+              <th>Title</th>
+              <th></th>
+              <th></th>
+              <th></th>
+        </tr>
+
+      <% @cars.each do |c| %>
+
+        <tr class="active">
+            <td><%= c.make %></td>
+            <td><%= c.model %></td>
+            <td><%= c.year %></td>
+            <td><%= c.trim %></td>
+            <td><%= c.mileage %></td>
+            <td><%= c.transmission %></td>
+            <td><%= c.colour %></td>
+            <td><%= c.title %></td>
+            <td><%= link_to "Show", car_path(c) %></td>
+            <td><%= link_to "Edit", edit_car_path(c) %>     </td>      
+            <td><%= link_to "Delete", c, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+   
+ <% end %>
+   </table>
+
+    </div>
+</div>
+
+            
+
+    <br><br><br><br><br><br><br>
