--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,41 +1,39 @@
 <div class="car-new">
 <h1>Add new car details</h1>
+
 <%= form_for @car do |c| %>
 
      <%= c.label :make %><br>
-     <%= c.text_field :make %><br />
+     <%= c.text_field :make %><br>
 
      <%= c.label :model %><br>
-     <%= c.text_field :model %><br />
+     <%= c.text_field :model %><br>
 
      <%= c.label :year %><br>
-     <%= c.text_field :year %><br />
+     <%= c.text_field :year %><br>
 
      <%= c.label :trim %><br>
-     <%= c.text_field :trim %><br />
+     <%= c.text_field :trim %><br>
 
      <%= c.label :mileage %><br>
-     <%= c.text_field :mileage %><br />
-
-     <%= c.label :price %><br>
-     <%= c.text_field :price %><br />
+     <%= c.text_field :mileage %><br>
 
      <%= c.label :transmission %><br>
-     <%= c.text_field :transmission %><br />
+     <%= c.text_field :transmission %><br>
 
      <%= c.label :colour %><br>
-     <%= c.text_field :colour %><br />
+     <%= c.text_field :colour %><br>
 
      <%= c.label :title %><br>
-     <%= c.text_field :title %><br />
-
+     <%= c.text_field :title %><br>
+<!-- 
      <%= c.label :picture %><br>
-     <%= c.file_field :picture %><br>
+     <%= c.file_field :picture %><br> -->
+  
+     <%= c.submit "Add New Car!" %><br>
 
-
-        <%= c.submit "Add info!" %><br>
-              
 <% end %>
 
     <%= link_to "Back to the list!", cars_path %>
 </div>
+<br><br><br><br><br>
