--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,25 @@
-    <div class="user">
+    
+  <div class="show">
     <h1>Users!</h1>
-    <ul>
-        <% @users.each do |u| %>
-            <li>
-                <strong> UserName:</strong> <%= u.name %> <br> 
-                <strong>E-mail ID:</strong><%= u.email %><br>   
-                <%= link_to "Show", user_path(u) %>
-                <%= link_to "Edit user!", edit_user_path(u) %>
-                 <%= link_to "Delete user!", u, method: :delete, data: {confirm: 'Are you sure?'} %>
-            </li>
-        <% end %>
-    </ul>
+    <div class="table-responsive">
+	    <table class="table table-hover">
+	     <tr class="info">
+	       <th>UserName</th>
+	       <th> E-mail ID</th>
+	       <th></th>
+	       <th></th>
+	       <th></th>
+	   </tr>
+	   <% @users.each do |c| %>
+		<tr class="active">
+	        <td><%= c.name %></td>
+	        <td><%= c.email %></td>
+	        <td><%= link_to "Show", user_path(c) %></td>
+            <td><%= link_to "Edit", edit_user_path(c) %>     </td>      
+            <td><%= link_to "Delete", c, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	   </tr>
+	   <% end %>
+	   </table>
     </div>
+  </div>  
+<br><br><br><br><br>
