--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,22 @@
 
-<div class="show">
-    <h1>Show Users!</h1>
-    <ul>
-            <li>
-            <strong> Username: <%= @user.name %> & E-mail:<%= @user.email %></strong>
-			<%= link_to "Edit user!", edit_user_path(@user) %> 
-            <%= link_to "Delete this user!", @user, method: :delete, data: { confirm: 'Are you sure?' } %>
-            <%= link_to "Back to the list!", users_path %>    
-            </li>
-    </ul>
-</div>
+  <div class="show">
+    <h1>Users!</h1>
+    <div class="table-responsive">
+      <table class="table table-hover">
+          <tr class="info">
+              <th>UserName</th>
+              <th> E-mail ID</th>
+              <th></th>
+              <th></th>
+          </tr>
+          <tr class="active">
+              <td><%= @user.name %></td>
+              <td><%= @user.email %></td> 
+            <td><%= link_to "Edit", edit_user_path(@user) %>     </td>      
+            <td><%= link_to "Delete", @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+     </table>
+<%= link_to "Back to the list!", users_path %> 
+    </div>
+    </div>  
+<br><br><br><br><br>
