--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div class="container">
         <div id="navbar">
           <header class="logo">
-          <img src="assets/c-logo.jpg" alt="click for home." class="img-responsive">
+          <%= image_tag "c-logo.jpg"%>
           </header>
         </div>
         <div class="enter">
@@ -38,7 +38,7 @@
             <p><a href="#" class="btn btn-success btn-xs">Read more >></a></p>
          </div>
          <p><small>Contact us.</small></p>
-         <p><img src="assets/c-logo.jpg" alt="" class="img-responsive img-rounded "></p>
+         <p><%= image_tag "c-logo.jpg"%></p>
     </footer>
 </body>
 </html>
