--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,9 +61,9 @@ input,textarea,select, .uneditable-input
 input{
   height: auto !important
 }
-#logo{
+.logo{
       position: fixed;
-      top: 100px;
+      top: 1px;
       left: 10px;
 }
 
