final commit only

--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -93,6 +93,7 @@
     <%= f.label :Suggestion %><br>
     <%= f.text_area :text %>
   </p>
+  <p>What you think is the best price for this vehicle?</p>
  <%= radio_button_tag(:price, "low") %>
 <%= label_tag(:price_low, "Below $5000") %>
 <%= radio_button_tag(:price, "medium") %>
